[project]
name = "abusech-mcp"
version = "0.1.0"
description = "AbuseCh CTI MCP server for threat intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 