[project]
name = "abusech-mcp"
version = "0.1.0"
description = "MCP server fetching Threat Intelligence from different abuse.ch Platforms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 